[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/List Menu/ListMenuItem.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0 )
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 0 )

[node name="ListMenuItem" type="PanelContainer"]
margin_left = 960.0
margin_right = 974.0
margin_bottom = 14.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="ListMenuItemContainer" type="HBoxContainer" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 490.0
margin_bottom = 15.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Name" type="Label" parent="ListMenuItemContainer"]
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="OtherText" type="Label" parent="ListMenuItemContainer"]
margin_left = 4.0
margin_right = 489.0
margin_bottom = 14.0
rect_min_size = Vector2( 485, 14 )
size_flags_horizontal = 3
size_flags_vertical = 1
align = 2

[connection signal="mouse_entered" from="." to="." method="_on_ListMenuItem_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ListMenuItem_mouse_exited"]
